fix: disable vercel deploy as it tries to send too much, fix padding on harbor-qr section

--- a/src/harbor-qr.scss
+++ b/src/harbor-qr.scss
@@ -1,7 +1,7 @@
 section.content {
   max-width: 30rem;
   margin: 0 auto;
-  padding: 3rem 0;
+  padding: 3rem 1rem;
   min-height: 80vh;
 }
 
